expense list ui

--- a/public/styles/base/_reset.scss
+++ b/public/styles/base/_reset.scss
@@ -42,7 +42,7 @@ body {
     text-align: start;
     font-size: var(--text-md);
     // color: var(--main-text);
-    background-color: var(--white-100);
+    background-color: #FAFCFC;
 
 }
 
