--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -18,7 +18,7 @@
 
             <p-button class="text-end block" [label]="'auth.forget_password' | translate" [link]="true" />
 
-            <p-button label="login" styleClass="primary-btn w-full" routerLink="/dashboard" />
+            <p-button label="login" styleClass="primary-btn w-full" routerLink="/expense" />
 
             <div class="mt-10">
 
