--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <h4 class="expenset text-center">Expenset</h4>
 
 
-    <form class="login-form ">
+    <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onLogin()">
 
         <h6 class="text-center mt-24">{{'auth.login' | translate}}</h6>
 
@@ -15,10 +15,10 @@
             <app-input [control]="loginForm.get('password')" [inputType]="'password'" [isLoading]="isLoading"
                 [isSubmitted]="isSubmitted" [inputLabel]="'auth.password'"></app-input>
 
-
             <p-button class="text-end block" [label]="'auth.forget_password' | translate" [link]="true" />
 
-            <p-button [label]="'auth.login' | translate" styleClass="primary-btn w-full" routerLink="/expense" />
+            <p-button type="submit" [label]="'auth.login' | translate" styleClass="primary-btn w-full"
+                [loading]="isLoading" />
 
             <div class="mt-10">
 
@@ -41,7 +41,7 @@
                 <div class="text-center">
 
                     <p class="sub-text"> Didn't have and account ?
-                    <p-button class="" [label]="'auth.signup' | translate" [link]="true" />
+                        <p-button class="" [label]="'auth.signup' | translate" [link]="true" />
                     </p>
                 </div>
 
