--- a/src/app/features/expense/expense-list/expense-item/expense-item.component.html
+++ b/src/app/features/expense/expense-list/expense-item/expense-item.component.html
@@ -1,1 +1,19 @@
-<p>expense-item works!</p>
+<div class="expense-item">
+    <div class="expense-type">
+        <div class="category-icon">
+            <i [class]="(expense()?.category?.icon || 'pi pi-bookmark') + ' text-blue-400 m-auto'"></i>
+        </div>
+        <div>
+            <p class="font-semibold mb-1">{{expense()?.category?.name || expense()?.category}}</p>
+            <span class="sub-text">Manually</span>
+        </div>
+
+    </div>
+
+    <div class="expense-amount text-end">
+        <p class="font-semibold mb-1">{{(expense()?.usdAmount || 0) | currency}}</p>
+        <span class="sub-text"> {{expense()?.date | date }} </span>
+        <!-- 'EEEE HH:mm a' -->
+    </div>
+
+</div>
