--- a/public/styles/_general_styles.scss
+++ b/public/styles/_general_styles.scss
@@ -33,3 +33,12 @@
         margin-inline-start: 4px;
     }
 }
+
+.invalid_element {
+
+    &.p-inputtext,
+    .p-inputtext,
+    &.p-select {
+        border: 1px solid rgb(220, 38, 38) !important;
+    }
+}
