--- a/src/app/shared/components/loading/loading.component.scss
+++ b/src/app/shared/components/loading/loading.component.scss
@@ -1,43 +1,4 @@
-.loading-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  display: flex;
+::ng-deep .p-blockui {
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Ensure it's above all other content */
-}
-
-.loading-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.spinner {
-  width: 40px;
-  height: 40px;
-  border: 4px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  border-top-color: #3498db; /* Primary color from your theme */
-  animation: spin 1s ease-in-out infinite;
-}
-
-.loading-message {
-  margin-top: 10px;
-  font-size: 16px;
-  color: #333;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
 }
