--- a/src/app/features/expense/expense-list/expense-list.component.html
+++ b/src/app/features/expense/expense-list/expense-list.component.html
@@ -13,7 +13,7 @@
 
         <div class="filter-options">
             <p-select [options]="filterOptions" [(ngModel)]="selectedFilter" optionLabel="label" optionValue="key"
-                placeholder="Select a filter option" class="w-full md:w-56" [showClear]="true" />
+                placeholder="Select a filter option" class="w-full md:w-56" (onChange)="onFilter()" [showClear]="true" />
 
         </div>
     </div>
