--- a/src/app/features/expense/expense-list/expense-item/expense-item.component.html
+++ b/src/app/features/expense/expense-list/expense-item/expense-item.component.html
@@ -1,7 +1,7 @@
 <div class="expense-item">
     <div class="expense-type">
-        <div class="category-icon">
-            <i [class]="(expense()?.category?.icon || 'pi pi-bookmark') + ' text-blue-400 m-auto'"></i>
+        <div [class]="'category-icon ' + expense()?.category?.id">
+            <i [class]="(expense()?.category?.icon || 'pi pi-bookmark') + ' m-auto'"></i>
         </div>
         <div>
             <p class="font-semibold mb-1">{{expense()?.category?.name || expense()?.category}}</p>
